--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "SystemetApi is used to search systembolagets products",
   "dependencies": {
     "mysql": "^2.10.2",
-    "express": "~4.0.0",
-    "body-parser": "~1.0.1"
+    "express": "^4.0.0",
+    "body-parser": "^1.0.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-execute": "^0.2.2"
   }
 }
