--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "server.js",
   "description": "SystemetApi is used to search systembolagets products",
   "dependencies": {
-    "mysql": "^2.10.2",
+    "body-parser": "^1.0.1",
+    "cors": "^2.7.1",
     "express": "^4.0.0",
-    "body-parser": "^1.0.1"
+    "mysql": "^2.10.2"
   }
 }
