--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "body-parser": "^1.0.1",
     "cors": "^2.7.1",
     "express": "^4.0.0",
-    "mysql": "^2.10.2"
+    "fs": "0.0.2",
+    "mysql": "^2.10.2",
+    "request": "^2.70.0"
   }
 }
