--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.7.1",
     "express": "^4.0.0",
     "fs": "0.0.2",
+    "helmet": "^1.3.0",
     "mysql": "^2.10.2",
     "request": "^2.71.0",
     "xml2json": "^0.9.0"
