--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fs": "0.0.2",
     "helmet": "^1.3.0",
     "mysql": "^2.10.2",
+    "node-geocoder": "^3.9.1",
     "request": "^2.71.0",
     "xml2json": "^0.9.0"
   }
