--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "mysql": "^2.10.2",
     "node-geocoder": "^3.9.1",
     "request": "^2.71.0",
-    "xml2json": "^0.9.0"
+    "xml2js": "latest"
   }
 }
